--- a/templates/category.html
+++ b/templates/category.html
@@ -289,7 +289,7 @@
                                             </li>
                                             <div class="circle-mask2">
                                                 <div class="circle-mask2-text">
-                                                    <span style="font-size:24px;">50</span>
+                                                    <span style="font-size:24px;">{{ product.unit_price }}</span>
                                                     <span style="font-size:15px;">원</span>
                                                 </div>
                                             </div>
@@ -397,7 +397,7 @@
                                             </li>
                                             <div class="circle-mask2">
                                                 <div class="circle-mask2-text">
-                                                    <span style="font-size:24px;">50</span>
+                                                    <span style="font-size:24px;">{{ product.unit_price }}</span>
                                                     <span style="font-size:15px;">원</span>
                                                 </div>
                                             </div>
@@ -503,7 +503,7 @@
                                             </li>
                                             <div class="circle-mask2">
                                                 <div class="circle-mask2-text">
-                                                    <span style="font-size:24px;">50</span>
+                                                    <span style="font-size:24px;">{{ product.unit_price }}</span>
                                                     <span style="font-size:15px;">원</span>
                                                 </div>
                                             </div>
