report link in dashboard side bar

--- a/templates/account/dashboard_sidebar.html
+++ b/templates/account/dashboard_sidebar.html
@@ -81,7 +81,7 @@
                 <li class="contact_button"><a>- 고객센터</a></li>
             </ul>
             <ul>
-                <li><a href="{% url 'contact' %}">- 신고</a></li>
+                <li><a href="{% url 'report' %}">- 신고</a></li>
             </ul>
         </div>
     </div>
