--- a/templates/report/report_received.html
+++ b/templates/report/report_received.html
@@ -27,6 +27,15 @@
             </div>
         </div>
         <div>
+            <div class="report-received-table-wrapper">
+                <ul class="report-received-table-ul">
+                    <li class="table_report number">번호</li>
+                    <li class="table_report type">유형</li>
+                    <li class="table_report detail">문의내용</li>
+                    <li class="table_report date">날짜</li>
+                    <li class="table_report status">상태</li>
+                </ul>
+            </div>
             {% if reports %}
                 {% for report in reports %}
                     <div>
