--- a/static/css/message.css
+++ b/static/css/message.css
@@ -110,7 +110,7 @@ table.channels .channel-lastmessagetime {
 }
 #chat-messages{
 	position: absolute;
-	margin-top:315px;
+	margin-top:415px;
     top:0;
 	height: 373px;
 	width:545px;
@@ -394,4 +394,89 @@ label.chat-input-file.file-upload {
 
 .no_message_wrapper img{
 	width:15%;
+}
+
+/* message_notice */
+.message_notice_wrapper{
+	width:96%;
+	height:80px;
+	margin-top:10px;
+	margin-left:2%;
+	margin-bottom:10px;
+	background-color: rgba(242, 242, 242, 0.49);
+}
+
+.message_notice_wrapper .message_notice_title{
+	width:96%;
+	height:40%;
+	margin-left:2%;
+	padding-top:5px;
+	font-size: 15px;
+	border-bottom: 1px solid #a3a3a3;
+}
+
+.message_notice_wrapper .message_notice_content{
+	font-size: 12px;
+	padding-left:10%;
+	padding-top:1.5%;
+}
+
+.message_notice_wrapper .message_notice_content button{
+	background: none;
+	color: #648efc;
+}
+
+/* popup part */
+.message_popup_wrapper{
+	position:absolute;
+	display: none;
+	width:500px;
+	height:200px;
+	background-color: white;
+	z-index:20;
+	border:1px solid #a3a3a3;
+	text-align: center;
+}
+
+
+.message_popup_wrapper .message_popup_title{
+	font-size: 12px;
+	display: inline-block;
+	margin-top: 20px;
+}
+
+.message_popup_wrapper .message_popup_explain{
+	width:94%;
+	height:27%;
+	border: 1px solid #a3a3a3;
+	margin-left:3%
+}
+
+.message_popup_wrapper .message_popup_explain .message_popup_logo{
+	width:45%;
+	height:100%;
+	display: inline-block;
+	vertical-align: sub;
+	border-right: 1px solid #a3a3a3;
+}
+
+.message_popup_wrapper .message_popup_explain .message_popup_logo img{
+	width:90%;
+}
+
+.message_popup_wrapper .message_popup_explain .message_popup_detail {
+	width:53%;
+	height:100%;
+	display: inline-block;
+	font-size: 14px;
+}
+
+.message_popup_wrapper .message_popup_text{
+	width:94%;
+	height:27%;
+	margin-top:10px;
+	text-align: left;
+padding-left:5px;
+	border: 1px solid #a3a3a3;
+	margin-left:3%
 }
