--- a/templates/message/message_room.html
+++ b/templates/message/message_room.html
@@ -17,6 +17,36 @@
         <div class="dashboard-nav">
             메시지
         </div>
+        <div class="message_popup_wrapper">
+            <div class="message_popup_title">인플루언서님께서 사용하고 있는 개인 배너나 문구가 없다면 소셜업 배너를 사용해주세요.</div>
+            <div class="message_popup_explain">
+                <div class="message_popup_logo">
+                    <img src="/static/img/logo.png"/>
+                </div>
+                <div class="message_popup_detail">
+                    본 포스팅은 소셜업을 통해 업체로부터<br/>
+                    경제적 대가를 받고 작성한 포스팅입니다.
+                </div>
+            </div>
+            <div class="message_popup_text">&lt;a href="https;//socialup.kr/81521" target="_blank">
+                <br/>
+                -> 추후 소스 수정
+            </div>
+            <div class="message_popup_btns"></div>
+        </div>
+        <div class="message_notice_wrapper">
+            <div class="message_notice_title">
+                <img style="width:30px; vertical-align: bottom;" src="/static/img/message_notice.png"/>
+                포스팅 작성 전 주의사항
+            </div>
+            <div class="message_notice_content">
+                <div>블로그 작성시 각 포스팅 마지막에 리뷰 배너를 삽입해주세요.</div>
+                <div>
+                    <button>[리뷰 배너 삽입 방법 보기]</button>
+                    <button style="margin-left:20px;">[관련 공지 보러 가기]</button>
+                </div>
+            </div>
+        </div>
         <div id="message-pannel">
             <div id="chatview">
                 <div id="chat-messages"></div>
