change the order of follower_num, visit_num in product_detail (issue #204)

--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -259,8 +259,8 @@
                                 일평균 방문자수 / 팔로워
                             </div>
                             <div class="sub-content">
-                                <span>{{ product.follower_num }} </span>/
-                                <span>{{ product.follower_visit_num }}</span>
+                                <span>{{ product.follower_visit_num }}</span>/
+                                <span>{{ product.follower_num }} </span>
                             </div>
                         {% elif product.sns_type == "facebook" %}
                             <div class="title">
