--- a/templates/account/dashboard_base.html
+++ b/templates/account/dashboard_base.html
@@ -10,6 +10,7 @@
 
 {% block js %}
     <script type="text/javascript" src="{% static 'js/dashboard.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/clipboard.min.js' %}"></script>
     {% block dashboard_js %}{% endblock %}
 {% endblock %}
 
